'博客及分页'

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -32,6 +32,13 @@
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor%}
+
+    {% if prev_url %}
+        <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+        <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock%}
 
 904520fa2436618600fb4e910bfe8b9f
