--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,32 +1,37 @@
 <html>
-<head>
-    {% if title %}
-        <title>{{ title }} - Microblog</title>
-    {% else %}
-        <title>Welcome to Microblog</title>
-    {% endif %}
-</head>
-<body>
-<div>Microblog:
-    <a href="{{ url_for('index') }}">Home</a>
-    {% if current_user.is_anonymous %}
+    <head>
+        {% if title %}
+            <title>{{ title }} - Microblog</title>
+        {% else %}
+            <title>Welcome to Microblog!</title>
+        {% endif %}
+    </head>
+    <body>
+    <div>
+        Microblog:
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('explore') }}">Explore</a>
+          {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
-    {% else %}
+        {% else %}
         <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
         <a href="{{ url_for('logout') }}">Logout</a>
-    {% endif %}
-</div>
-<hr>
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
+        {% endif %}
+    </div>
+
+     <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
         <ul>
             {% for message in messages %}
-                <li>{{ message }}</li>
+            <li>{{ message }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
-{% endwith %}
-{% block content %}
-{% endblock %}
-</body>
+        {% endif %}
+        {% endwith %}
+
+
+    {% block content %}
+    {% endblock %}
+    </body>
 </html>
