--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>File Not Found</h1>
-    <img src="{{ url_for('static',filename='images/404.jpg') }}" alt="">
     <p>
         <a href="{{ url_for('index') }}">Back</a>
     </p>
