--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Hello,{{ current_user.username }}!</h1>
-    {% if form %}
+<h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>    {% if form %}
     {{ wtf.quick_form(form) }}
     <br>
     {% endif %}
